--- a/docs/static/theme_overrides.css
+++ b/docs/static/theme_overrides.css
@@ -33,7 +33,7 @@
 
 /* pagina avanti/indietro */
 .btn-neutral {
-    background-color: #119b56 !important;
+    background-color: #b6c5be !important;
     color: #fff !important;
 }
 
