--- a/docs/static/theme_overrides.css
+++ b/docs/static/theme_overrides.css
@@ -48,7 +48,8 @@ h1, h2, h3 {
 }
 
 /* testo caption menu sx - setta i colori dell'indice nel menu a sx */
-.wy-nav-side {color: #4dc6ac !important;}
+/* ricordarsi che il massimo dei caratteri per le voci di macro menù è di 30 */
+/* .wy-nav-side {color: #4dc6ac;} */
 
 /*background colore colonna sx */
 /* .wy-side-scroll {background: #1c300f;} */
