--- a/docs/static/theme_overrides.css
+++ b/docs/static/theme_overrides.css
@@ -53,7 +53,7 @@ h1, h2, h3 {
 
 /* setta il colore del testo caption menu sx */
 .wy-menu-vertical p.caption {
-color: #a9ccc4;
+color: #5d9185;
 } 
 
 /*background colore colonna sx */
