--- a/docs/static/theme_overrides.css
+++ b/docs/static/theme_overrides.css
@@ -57,6 +57,13 @@ color: #51bcbc;
 } 
 
 
+/* setta il colore dell'area di sfondo dove è il menù menu a sx */
+.wy-menu-vertical {
+color: #193a33;
+} 
+
+
+
 /* colore del piccolo pannello sx in basso VERSION (Download & Github) */
 .rst-versions .rst-current-version {background: #193a33;}
 
@@ -76,6 +83,7 @@ li.current > a {text-decoration: underline; color: green !important;}
 /* disattiva il testo "latest"  menu a sx */
 .wy-side-nav-search>div.version {    display: none;}
 
+
 /* disativa il testo "edit on Github" in alto a destra */
 .wy-breadcrumbs li.wy-breadcrumbs-aside {
     float: right;
@@ -84,7 +92,6 @@ li.current > a {text-decoration: underline; color: green !important;}
 
 
 /* #ccd8ab colore deciso per appattarlo al verdino della freccia, per versione mobile */
-/* quello di prima era il seguente */
 /*    .wy-nav-top {background: linear-gradient(#ffaf05, #ffd105); }    */
 
 /* mobile settings */
