--- a/docs/static/theme_overrides.css
+++ b/docs/static/theme_overrides.css
@@ -56,7 +56,7 @@ color: #51bcbc;
 
 
 /* setta il colore dell'area di sfondo dove è il menù menu a sx */
-.wy-nav-side  {background: color: #193a33;} 
+.wy-nav-side  {background: #193a33;} 
 
 
 /* colore del piccolo pannello sx in basso VERSION (Download & Github) */
